--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
-    "i18next": "^21.8.1",
+    "i18next": "^25.2.1",
     "react": "^18.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^15.5.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.15.1"
   },
