--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "react-modal": "^3.15.1"
   },
   "devDependencies": {
+    "@types/i18next": "^13.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "^4.6.3",
+    "typescript": "^5.8.3",
     "vite": "^2.9.9"
   }
 }
